--- a/index.html
+++ b/index.html
@@ -12,63 +12,58 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <!-- Latest compiled JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-  <title>erlan se activity</title>
+  <title>my games</title>
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="50" data-new-gr-c-s-check-loaded="14.1052.0" data-gr-ext-installed="">
 
   <nav class="navbar navbar-expand-sm bg-secondary navbar-dark fixed-top">  
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="#section1">Section 1</a>
+        <a class="nav-link" href="#cuberun">CubeRun</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#section2">Section 2</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#section3">Section 3</a>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
-          Tutorials
-        </a>
-        <div class="dropdown-menu">
-          <a class="dropdown-item" href="#section41">Tutorial 1</a>
-          <a class="dropdown-item" href="#section42">Tutorial 2</a>
-        </div>
+        <a class="nav-link active" href="#cubejump">CubeJump</a>
       </li>
     </ul>
   </nav>
-  
-  <div id="section1" class="container-fluid bg-success" style="padding-top:70px;padding-bottom:70px">
-    <h1>Section 1</h1>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <div class="container-fluid bg-light mb-0 text-center" style="padding-top: 140px">
+    <h1 class="mb-0">The games that I made</h1>
   </div>
-  <div id="section2" class="container-fluid bg-warning" style="padding-top:70px;padding-bottom:70px">
-    <h1>Section 2</h1>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  </div>
-  <div id="section3" class="container-fluid bg-info" style="padding-top:70px;padding-bottom:70px">
-    <h1>Section 3</h1>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-  </div>
-  <div id="section41" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
-    <h1>Tutorial 1</h1>
+  <div id="cuberun" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
+    <h1>CubeRun</h1>
     <div class="container">
-      <p class="border-top border-bottom py-4 mb-0">Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+      <p class="border-top border-bottom py-4 mb-0">
+        CubeRun is the one of my firts games too. It is for pc.
+                        Again, it is a simple game. Here, you make the cube run 
+                        through obstacle to reach the finish. There are few levels, and 
+                        they are hard :).
+      </p>
       <div class="text-center border-bottom py-4 mt-0">
-        <img src="https://picsum.photos/seed/picsum/700/500" alt="nature"/>
+        <img class="fi4" src="images/cuberun/Capture.PNG" width="100%">
+        <img class="mt-3 d-block" src="images/cuberun/1.PNG" width="100%">
+        <img class="mt-3 d-block" src="images/cuberun/2.PNG" width="100%">
       </div>
     </div>
-    <div id="time">dasds</div>
   </div>
-  <div id="section42" class="container-fluid bg-light" style="padding-top:70px;padding-bottom:70px">
-    <h1>Tutorial 2</h1>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
-    <p>Try to scroll this section and look at the navigation bar while scrolling! Try to scroll this section and look at the navigation bar while scrolling!</p>
+  <div id="cubejump" class="container-fluid bg-light" style="padding-bottom:70px; padding-top: 70px">
+    <h1>CubeJump</h1>
+    <div class="container">
+      <p class="border-top border-bottom py-4 mb-0">
+        CubeJump is the my first game that can be actually played:). 
+                    It is made with Unity. This 
+                    game works in any kind of android phone.
+                    It is a simple game where you should make the cube jump from
+                    one block to another. Time of tapping and holding 
+                    the screen will determine force of the cube.
+                    Sometimes in the game the view will change from 
+                    second view to third view as shown in the third picture
+      </p>
+      <div class="text-center border-bottom py-4 mt-0">
+        <img class="fi1" src="images/cubejump/Capture.PNG" alt = cubejump1>
+      </div>
+    </div>
   </div>
+  <div id="time">dasds</div>
 </body>
 <script type="text/javascript">
   var today = new Date();
